--- a/res/layout-land/file_item.xml
+++ b/res/layout-land/file_item.xml
@@ -3,8 +3,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="wrap_content"
-              android:layout_height="48dp">
+              android:layout_height="96dp">
 
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
+            android:src="@drawable/ic_edit"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
