--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,5 +2,13 @@
 <resources>
 
     <color name="app_color">#f80</color>
+    <color name="app_color_pressed">#55ff8800</color>
+
+    <color name="window_background">#ececec</color>
+    <color name="folder_outline">#dddddd</color>
+    <color name="folder_background">#f0f0f0</color>
+    <color name="header_text_color">#232323</color>
+    <color name="title_text_color">#222222</color>
+    <color name="subtitle_text_color">#aaaaaa</color>
 
 </resources>
