--- a/res/values/themes_apptheme.xml
+++ b/res/values/themes_apptheme.xml
@@ -5,6 +5,7 @@
 
   <style name="AppTheme" parent="android:Theme.Holo.Light">
 
+    <item name="android:windowBackground">@color/window_background</item>
     <item name="android:editTextStyle">@style/EditTextAppTheme</item>
     <item name="android:buttonStyle">@style/ButtonAppTheme</item>
     <item name="android:imageButtonStyle">@style/ImageButtonAppTheme</item>
