--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -32,9 +32,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/divider"
-                android:padding="5dp"
+                android:layout_marginRight="7dp"
+                android:layout_marginLeft="7dp"
+                android:layout_marginTop="5dp"
                 android:id="@+id/fileList"
                 android:divider="@null"/>
+
+        <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="7dp"
+                android:layout_marginRight="7dp"
+                android:layout_marginBottom="5dp"
+                android:background="@color/folder_outline"
+                android:layout_below="@+id/fileList"/>
     </RelativeLayout>
 
 </ScrollView>
