--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -28,7 +28,8 @@
         android:layout_height="match_parent"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:paddingTop="5dp">
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp">
 
         <include layout="@layout/list_header"
                  android:id="@+id/fileHeader"/>
@@ -36,9 +37,13 @@
         <GridView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="5dp"
+                android:paddingRight="5dp"
+                android:paddingLeft="5dp"
+                android:paddingTop="5dp"
                 android:id="@+id/fileList"
                 android:divider="@null"
+                android:horizontalSpacing="5dp"
+                android:verticalSpacing="5dp"
                 android:numColumns="2"/>
     </LinearLayout>
 
