--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -18,15 +18,28 @@
                 android:tag="portrait"
                 android:divider="@null"/>
 
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/subtitle_text_color"
+                android:textSize="12sp"
+                android:layout_below="@+id/folderList"
+                android:text="@string/none"
+                android:textAllCaps="true"
+                android:gravity="center"
+                android:padding="20dp"
+                android:id="@+id/none"
+                android:visibility="gone"/>
+
         <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="7dp"
-            android:layout_marginRight="7dp"
-            android:layout_marginBottom="5dp"
-            android:background="@color/folder_outline"
-            android:layout_below="@+id/folderList"
-            android:id="@+id/divider"/>
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="7dp"
+                android:layout_marginRight="7dp"
+                android:layout_marginBottom="5dp"
+                android:background="@color/folder_outline"
+                android:layout_below="@+id/none"
+                android:id="@+id/divider"/>
 
         <ListView
                 android:layout_width="match_parent"
@@ -38,6 +51,19 @@
                 android:id="@+id/fileList"
                 android:divider="@null"/>
 
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/subtitle_text_color"
+                android:textSize="12sp"
+                android:layout_below="@+id/fileList"
+                android:text="@string/none"
+                android:textAllCaps="true"
+                android:gravity="center"
+                android:padding="20dp"
+                android:id="@+id/none2"
+                android:visibility="gone"/>
+
         <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
@@ -45,7 +71,7 @@
                 android:layout_marginRight="7dp"
                 android:layout_marginBottom="5dp"
                 android:background="@color/folder_outline"
-                android:layout_below="@+id/fileList"
+                android:layout_below="@+id/none2"
                 android:id="@+id/divider2"/>
     </RelativeLayout>
 
