can now open files by clicking on them lol full file explorer

--- a/res/layout-land/file_item.xml
+++ b/res/layout-land/file_item.xml
@@ -28,11 +28,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/title_text_color"
+                android:singleLine="true"
                 android:id="@+id/fileName"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/subtitle_text_color"
+                android:singleLine="true"
                 android:id="@+id/date"/>
 
     </LinearLayout>
