--- a/res/layout/over_note.xml
+++ b/res/layout/over_note.xml
@@ -15,7 +15,7 @@
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
-           android:background="@android:color/transparent"
+           android:background="@drawable/pressed_button"
            android:text="@string/discard"
            android:id="@+id/discard"/>
 
@@ -23,7 +23,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@android:color/transparent"
+            android:background="@drawable/pressed_button"
             android:text="@string/save"
             android:id="@+id/save"/>
         </LinearLayout>
@@ -32,7 +32,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/note_name_hint"
-        android:id="@+id/name"/>
+        android:id="@+id/name"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"/>
 
     <EditText
         android:layout_width="match_parent"
@@ -40,6 +42,9 @@
         android:layout_weight="1"
         android:hint="@string/note_text_hint"
         android:gravity="bottom"
-        android:id="@+id/content"/>
+        android:id="@+id/content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"/>
 
 </LinearLayout>
