--- a/res/drawable/pressed_background.xml
+++ b/res/drawable/pressed_background.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!-- the drawable for pushed buttons -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:state_pressed="true"
