--- a/res/drawable/rect_border.xml
+++ b/res/drawable/rect_border.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!-- a nice border drawable -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <solid android:color="#DD000000"/>
     <stroke android:width="2dp" android:color="#25FFFFFF"/>
