--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,80 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<!-- portrait mode main layout -->
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-    <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-
-        <ListView
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <!-- portrait mode main layout -->
+    <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="7dp"
-                android:layout_marginLeft="7dp"
-                android:layout_marginTop="5dp"
-                android:id="@+id/folderList"
-                android:tag="portrait"
-                android:divider="@null"/>
+                android:layout_height="match_parent">
 
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/subtitle_text_color"
-                android:textSize="12sp"
-                android:layout_below="@+id/folderList"
-                android:text="@string/none"
-                android:textAllCaps="true"
-                android:gravity="center"
-                android:padding="20dp"
-                android:id="@+id/none"
-                android:visibility="gone"/>
+        <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
 
-        <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginLeft="7dp"
-                android:layout_marginRight="7dp"
-                android:layout_marginBottom="5dp"
-                android:background="@color/folder_outline"
-                android:layout_below="@+id/none"
-                android:id="@+id/divider"/>
+            <ListView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="7dp"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginTop="5dp"
+                    android:id="@+id/folderList"
+                    android:tag="portrait"
+                    android:divider="@null"/>
 
-        <ListView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/divider"
-                android:layout_marginRight="7dp"
-                android:layout_marginLeft="7dp"
-                android:layout_marginTop="5dp"
-                android:id="@+id/fileList"
-                android:divider="@null"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/subtitle_text_color"
+                    android:textSize="12sp"
+                    android:layout_below="@+id/folderList"
+                    android:text="@string/none"
+                    android:textAllCaps="true"
+                    android:gravity="center"
+                    android:padding="20dp"
+                    android:id="@+id/none"
+                    android:visibility="gone"/>
 
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/subtitle_text_color"
-                android:textSize="12sp"
-                android:layout_below="@+id/fileList"
-                android:text="@string/none"
-                android:textAllCaps="true"
-                android:gravity="center"
-                android:padding="20dp"
-                android:id="@+id/none2"
-                android:visibility="gone"/>
+            <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginRight="7dp"
+                    android:layout_marginBottom="5dp"
+                    android:background="@color/folder_outline"
+                    android:layout_below="@+id/none"
+                    android:id="@+id/divider"/>
 
-        <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginLeft="7dp"
-                android:layout_marginRight="7dp"
-                android:layout_marginBottom="5dp"
-                android:background="@color/folder_outline"
-                android:layout_below="@+id/none2"
-                android:id="@+id/divider2"/>
-    </RelativeLayout>
+            <ListView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/divider"
+                    android:layout_marginRight="7dp"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginTop="5dp"
+                    android:id="@+id/fileList"
+                    android:divider="@null"/>
 
-</ScrollView>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/subtitle_text_color"
+                    android:textSize="12sp"
+                    android:layout_below="@+id/fileList"
+                    android:text="@string/none"
+                    android:textAllCaps="true"
+                    android:gravity="center"
+                    android:padding="20dp"
+                    android:id="@+id/none2"
+                    android:visibility="gone"/>
+
+            <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginRight="7dp"
+                    android:layout_marginBottom="5dp"
+                    android:background="@color/folder_outline"
+                    android:layout_below="@+id/none2"
+                    android:id="@+id/divider2"/>
+
+        </RelativeLayout>
+
+    </ScrollView>
+
+    <!-- The navigation drawer -->
+    <include layout="@layout/main_drawer"
+        android:id="@+id/left_drawer"
+        android:layout_width="280dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start" >
+
+    </include>
+
+</android.support.v4.widget.DrawerLayout>
 
