--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="header_text_color">#232323</color>
     <color name="title_text_color">#222222</color>
     <color name="subtitle_text_color">#aaaaaa</color>
+    <color name="light_drawer">#ffffff</color>
 
 </resources>
