--- a/res/layout/add_class.xml
+++ b/res/layout/add_class.xml
@@ -6,7 +6,7 @@
     android:gravity="center_horizontal">
 
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:drawableLeft="@drawable/ic_action_new_light"
