--- a/res/layout/add_class.xml
+++ b/res/layout/add_class.xml
@@ -6,11 +6,11 @@
     android:gravity="center_horizontal">
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:drawableLeft="@drawable/ic_action_new_light"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:text="@string/add_new"
         android:textColor="@color/header_text_color"
         android:background="@drawable/pressed_button_over_note"/>
