--- a/res/menu/browser_activity.xml
+++ b/res/menu/browser_activity.xml
@@ -4,7 +4,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/menu_add"
-          android:icon="@drawable/ic_add"
+          android:icon="@drawable/ic_action_new_light"
           android:title="@string/menu_add"
           android:showAsAction="always"/>
 
