--- a/res/layout/add_class.xml
+++ b/res/layout/add_class.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal">
+    android:gravity="center"
+    android:layout_gravity="center"
+    android:background="@drawable/pressed_button_over_note">
 
-    <Button
+    <ImageView
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:padding="5dp"
+        android:src="@drawable/ic_action_new_light"/>
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:drawableLeft="@drawable/ic_action_new_light"
         android:textSize="20sp"
         android:text="@string/add_new"
-        android:textColor="@color/header_text_color"
-        android:background="@drawable/pressed_button_over_note"/>
+        android:textColor="@color/header_text_color"/>
 
 </LinearLayout>
