--- a/res/layout/over_note.xml
+++ b/res/layout/over_note.xml
@@ -34,7 +34,8 @@
         android:hint="@string/note_name_hint"
         android:id="@+id/name"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"/>
+        android:layout_marginRight="20dp"
+        android:inputType="textAutoComplete|textAutoCorrect|textCapSentences"/>
 
     <EditText
         android:layout_width="match_parent"
@@ -45,6 +46,7 @@
         android:id="@+id/content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="20dp"
+        android:inputType="textAutoComplete|textAutoCorrect|textCapSentences"/>
 
 </LinearLayout>
