--- a/res/layout/note_activity.xml
+++ b/res/layout/note_activity.xml
@@ -4,7 +4,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:padding="10dp">
+
+    <EditText android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:textSize="24sp"
+              android:fontFamily="serif"
+              android:background="@null"
+              android:gravity="center"
+              android:hint="@string/note_title"/>
+
+    <View android:background="@color/app_color"
+          android:layout_width="match_parent"
+          android:layout_height="1dp"
+          android:layout_marginRight="24dp"
+          android:layout_marginLeft="24dp"
+          android:layout_marginBottom="10dp"
+          android:layout_marginTop="10dp"/>
 
     <ListView
         android:id="@android:id/list"
