wow, ton of work to schedule those, but it is done. we still will need to set up the alarms and stuff to bring up the service though.
Inside those alarms, we will also have to schedule the next instance of the class and update the times because i store them as long's so that we can use the dates to check what class is currently running when saving them from the overlay note

We may have to add another column to the sql table to set the alarm id, or we could just use the random id that the table generates when inserting the content.

--- a/res/layout/date_dialog.xml
+++ b/res/layout/date_dialog.xml
@@ -39,7 +39,8 @@
             android:layout_weight="1"
             android:layout_gravity="center"
             android:layout_height="wrap_content"
-            android:text="@string/save"
+            android:text="@string/next"
+            android:inputType="textCapWords|textAutoComplete|textAutoCorrect"
             android:background="@drawable/pressed_button_over_note" />
 
         </LinearLayout>
