--- a/res/layout/repeated_dialog.xml
+++ b/res/layout/repeated_dialog.xml
@@ -129,7 +129,7 @@
             android:layout_weight="1"
             android:layout_gravity="center"
             android:layout_height="wrap_content"
-            android:text="@string/save"
+            android:text="@string/next"
             android:background="@drawable/pressed_button_over_note" />
 
     </LinearLayout>
