--- a/res/layout/time_dialog.xml
+++ b/res/layout/time_dialog.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <TimePicker
-        android:id="@+id/startTimePicker"
+        android:id="@+id/timePicker"
         android:layout_width="wrap_content"
         android:layout_gravity="center"
         android:layout_height="wrap_content"
@@ -31,7 +31,7 @@
             android:layout_weight="1"
             android:layout_gravity="center"
             android:layout_height="wrap_content"
-            android:text="@string/save"
+            android:text="@string/next"
             android:background="@drawable/pressed_button_over_note" />
 
     </LinearLayout>
