--- a/res/layout/note_activity.xml
+++ b/res/layout/note_activity.xml
@@ -24,12 +24,13 @@
           android:layout_marginBottom="10dp"
           android:layout_marginTop="10dp"/>
 
-    <ListView
+    <com.klinker.android.slackoff.ui.NotesListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:dividerHeight="0dp"
         android:divider="@null"
-        android:footerDividersEnabled="false"/>
+        android:footerDividersEnabled="false"
+        android:descendantFocusability="beforeDescendants"/>
 
 </LinearLayout>
