--- a/res/layout/note_item.xml
+++ b/res/layout/note_item.xml
@@ -12,7 +12,8 @@
             android:id="@+id/checkBox"/>
 
     <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="5dp">
@@ -35,4 +36,13 @@
                 android:id="@+id/imageView"
                 android:visibility="gone"/>
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/deleteButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_discard"
+        android:background="@drawable/pressed_button_over_note"/>
+
 </LinearLayout>
