--- a/res/menu/note_activity.xml
+++ b/res/menu/note_activity.xml
@@ -11,6 +11,6 @@
           android:showAsAction="never"
           android:title="@string/checkable"
           android:checkable="true"
-          android:checked="true"/>
+          android:checked="false"/>
 
 </menu>
