--- a/res/values-v11/themes_apptheme.xml
+++ b/res/values-v11/themes_apptheme.xml
@@ -11,6 +11,9 @@
     <item name="android:imageButtonStyle">@style/ImageButtonAppTheme</item>
     <item name="android:listChoiceBackgroundIndicator">@drawable/apptheme_list_selector_holo_light</item>
     <item name="android:activatedBackgroundIndicator">@drawable/apptheme_activated_background_holo_light</item>
+    <item name="android:textSelectHandleLeft">@drawable/ic_cursor</item>
+    <item name="android:textSelectHandleRight">@drawable/ic_cursor</item>
+    <item name="android:textSelectHandle">@drawable/ic_cursor</item>
 
   </style>
 
