--- a/res/layout/school_class.xml
+++ b/res/layout/school_class.xml
@@ -30,7 +30,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/name"
                 android:textStyle="bold"
-                android:textSize="20dp"/>
+                android:textSize="20dp"
+                android:maxLines="1"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
