--- a/res/layout/note_activity.xml
+++ b/res/layout/note_activity.xml
@@ -5,7 +5,9 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:padding="10dp">
+              android:paddingLeft="10dp"
+              android:paddingRight="10dp"
+              android:paddingTop="10dp">
 
     <EditText android:layout_width="match_parent"
               android:layout_height="wrap_content"
