--- a/res/layout/note_activity.xml
+++ b/res/layout/note_activity.xml
@@ -29,10 +29,13 @@
     <com.klinker.android.slackoff.ui.NotesListView
             android:id="@+id/listView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:dividerHeight="0dp"
             android:divider="@null"
             android:footerDividersEnabled="false"
             android:descendantFocusability="beforeDescendants"/>
+
+    <include layout="@layout/note_footer"/>
 
 </LinearLayout>
