--- a/res/layout/note_item.xml
+++ b/res/layout/note_item.xml
@@ -24,7 +24,10 @@
                 android:ems="10"
                 android:id="@+id/note"
                 android:background="@null"
-                android:padding="10dp"
+                android:paddingBottom="10dp"
+                android:paddingTop="5dp"
+                android:paddingRight="10dp"
+                android:paddingLeft="10dp"
                 android:textSize="16sp"
                 android:fontFamily="serif"
                 android:hint="@string/type_here"/>
