more fixes... toasts are not showing for some reason though?

--- a/res/layout/note_activity.xml
+++ b/res/layout/note_activity.xml
@@ -16,7 +16,7 @@
               android:background="@null"
               android:gravity="center"
               android:hint="@string/note_title"
-              android:id="@+id/title"/>
+              android:id="@+id/title" android:capitalize="words"/>
 
     <View android:background="@color/app_color"
           android:layout_width="match_parent"
