--- a/res/menu/note_activity.xml
+++ b/res/menu/note_activity.xml
@@ -13,4 +13,8 @@
           android:checkable="true"
           android:checked="false"/>
 
+    <item android:id="@+id/menu_delete"
+          android:showAsAction="never"
+          android:title="@string/delete_file"/>
+
 </menu>
