finished images in note

--- a/res/layout/note_item.xml
+++ b/res/layout/note_item.xml
@@ -33,8 +33,8 @@
                 android:hint="@string/type_here"/>
 
         <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="250dp"
+                android:layout_height="250dp"
                 android:id="@+id/imageView"
                 android:visibility="gone"
                 android:padding="5dp"/>
