--- a/res/layout/school_class.xml
+++ b/res/layout/school_class.xml
@@ -14,6 +14,7 @@
         android:layout_marginBottom="10dp">
 
         <ImageButton
+            android:id="@+id/delete_button"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:background="@drawable/pressed_button_over_note"
