style changes for the drawer

--- a/res/layout/main_drawer.xml
+++ b/res/layout/main_drawer.xml
@@ -5,11 +5,8 @@
     android:id="@+id/listView"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_marginLeft="6dp"
-    android:layout_marginRight="8dp"
-    android:divider="@drawable/apptheme_btn_default_normal_holo_light"
-    android:dividerHeight="1dp"
     android:scrollbars="vertical"
+    android:divider="@null"
     android:background="@color/light_drawer"
     android:listSelector="@android:color/transparent"
     android:footerDividersEnabled="false"
