--- a/res/layout/school_class.xml
+++ b/res/layout/school_class.xml
@@ -67,6 +67,7 @@
 
     <LinearLayout
         android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/pressed_background">
