formatted the text from the overnote to be seen in the note activity

--- a/res/layout/over_note.xml
+++ b/res/layout/over_note.xml
@@ -47,6 +47,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="20dp"
-            android:inputType="textAutoComplete|textAutoCorrect|textCapSentences"/>
+            android:inputType="textAutoComplete|textAutoCorrect|textCapSentences|textMultiLine"
+            android:imeOptions="actionNone"/>
 
 </LinearLayout>
